# three-body-game

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
examples/: round_2.toml  round_3.toml  round_4.toml  three_1.toml
src/: body.rs  config.rs  controller.rs  main.rs  num.rs  vector.rs
src/apps/: gui_macroquad.rs  mod.rs  tui.rs
src/apps/gui_macroquad/: basic.rs  config.rs  convert.rs  functions.rs  mouse.rs  ui.rs  view.rs
src/apps/gui_macroquad/functions/: collision.rs
src/apps/tui/: convert.rs  ui.rs  view.rs
src/res/: banner.txt  icon.txt
